samples/OK/predef_funcs_ord.php
<?php
declare(strict_types=1);
$a = ord("hello");